--- a/templates/main.html
+++ b/templates/main.html
@@ -9,6 +9,9 @@
   <form action="/dbs" method="post">
     <p><input type="submit" value="DBS Share Prediction"></p>
   </form>
+    <form action="/dbs" method="post">
+    <p><input type="submit" value="Creditability Prediction"></p>
+  </form>
     <form action="/" method="post">
     <p><input type="submit" value="Logout"></p>
   </form>
