--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,7 @@
   <form action="/dbs" method="post">
     <p><input type="submit" value="DBS Share Prediction"></p>
   </form>
-    <form action="/dbs" method="post">
+    <form action="/credit" method="post">
     <p><input type="submit" value="Creditability Prediction"></p>
   </form>
     <form action="/" method="post">
